--- a/css/main.css
+++ b/css/main.css
@@ -30,7 +30,7 @@ a {
 
 .table-tr{
     /*margin: 0 auto;*/
-    border: aqua solid 2px;
+    border: navajowhite solid 2px;
     border-spacing: 0;
 
 }
@@ -100,6 +100,16 @@ a {
     right: 15px;
     top:15px;
     font: 18px bold;
+}
+
+.currency_tbl{
+    border: black solid 1px;
+    border-spacing: 0;
+    background-color: navajowhite;
+}
+.currency_tbl td{
+    padding: 2px 6px;
+    border: black solid 1px;
 }
 
 .smalltxt{
